--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,8 +11,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
+.imgtxt{
+ max-width: 200px;
+}
+.container{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
 
+  
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
